# cargo-public-api-benchmarks

./: Cargo.toml  LICENSE  README.md
benches/: json_processing.rs
src/: main.rs
