[package]
edition = "2021"
name = "cargo-public-api-benchmarks"
version = "0.1.0"
description = "Benchmarks for https://github.com/Enselic/cargo-public-api and related crates"
homepage = "https://github.com/cargo-public-api/cargo-public-api-benchmarks"
documentation = "https://github.com/cargo-public-api/cargo-public-api-benchmarks"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cargo-public-api/cargo-public-api-benchmarks"

# As recommended by cargo flamegraph
[profile.release]
debug = true

[dependencies.public-api]
path = "../cargo-public-api/public-api"
version = "*"

[dev-dependencies.rustdoc-json]
path = "../cargo-public-api/rustdoc-json"
version = "*"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "json_processing"
harness = false
